force-app/objects/Opportunity/fields/Active_Apps_Bid__c.field-meta.xml
<CustomField>
    <fullName>Active_Apps_Bid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Needs to be ticked off to be a subject on APPS BID meeting and GO/NO GO decision in Apps. 
Must be ticked off for opportunities that will trigger a BCR process, has estimates, fixed price and/or DAD services</inlineHelpText>
    <label>Active Apps Bid (Case for Bid meeting)</label>
    <type>Checkbox</type>
</CustomField>