force-app/objects/Opportunity/fields/AppsUserBidResponsibility__c.field-meta.xml
<CustomField>
    <fullName>AppsUserBidResponsibility__c</fullName>
    <formula>IF(
OR (
$User.Id = Owner.Id,
$User.Id = Apps_Owner__r.Id,
$User.Email =  Bid_Manager__r.Email__c, 
$User.Email =  Bid_Champion__r.Email__c,
$User.Email =  Solution_Architect__r.Email__c,
$User.Email =  Delivery_Manager__r.Email__c
)
,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apps$UserBidResponsibility</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>