force-app/objects/Opportunity/fields/BC_Bid_Champion__c.field-meta.xml
<CustomField>
    <fullName>BC_Bid_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Professional promoter of the offer. Is typically a BO/Community owner, BD or supervisor.</inlineHelpText>
    <label>Advisory Bid Champion</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Opportunities (BC Bid Champion)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>