force-app/objects/Opportunity/fields/BC_Bid_Manager__c.field-meta.xml
<CustomField>
    <fullName>BC_Bid_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Project manager for the offer. Calls in to meetings, organizes templates, creates Teams and delivers the offer. Usually someone from the Bid Office, can also be from BC</inlineHelpText>
    <label>Advisory Bid Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Opportunities (BC Bid Manager)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>