force-app/objects/Opportunity/fields/Bid_Champion__c.field-meta.xml
<CustomField>
    <fullName>Bid_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Professional promoter of the offer. Is typically a BO/Community owner, BD or supervisor.</inlineHelpText>
    <label>Bid Champion</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Opportunities (Bid Champion)</relationshipLabel>
    <relationshipName>OpportunitiesBidChmp</relationshipName>
    <type>Lookup</type>
</CustomField>