force-app/objects/Opportunity/fields/Bid_ID__c.field-meta.xml
<CustomField>
    <fullName>Bid_ID__c</fullName>
    <description>Used by flows during assigning bid room to opportunity</description>
    <label>Bid ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>