force-app/objects/Opportunity/fields/Bid_Manager__c.field-meta.xml
<CustomField>
    <fullName>Bid_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Project manager for the offer. Calls in to meetings, organizes templates, creates Teams and delivers the offer. Usually someone from the Bid Office, can also be from APPS</inlineHelpText>
    <label>Bid Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>OpportunitiesBIDMgr</relationshipName>
    <type>Lookup</type>
</CustomField>