force-app/objects/Opportunity/fields/Bid_Number__c.field-meta.xml
<CustomField>
    <fullName>Bid_Number__c</fullName>
    <label>BID Number</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>