force-app/objects/Opportunity/fields/Bid_Number_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Bid_Number_Deleted__c</fullName>
    <description>Used in the Reset Bid process</description>
    <label>Bid Number Deleted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>