force-app/objects/Opportunity/fields/BID_Office_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>BID_Office_Owner_Name__c</fullName>
    <formula>BID_Office_Owner__r.FirstName + &apos; &apos; +  BID_Office_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BID Office Owner Name</label>
    <type>Text</type>
</CustomField>