force-app/objects/Opportunity/fields/Bid_portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Bid_portal_URL__c</fullName>
    <description>Field is used in the Contract integration. Do not delete!</description>
    <formula>IF(Bid_Number__c = &quot;&quot;,  &quot;&quot;,  Bid_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BID Room_For integration</label>
    <type>Text</type>
</CustomField>