force-app/objects/Opportunity/fields/BID_Room_SE_II__c.field-meta.xml
<CustomField>
    <fullName>BID_Room_SE_II__c</fullName>
    <formula>IF(Bid_Number__c != &quot;&quot; ,
HYPERLINK( 
Bid_Number__c +  BID_URL_Country__c  + &quot;?Title=&quot; + 

SUBSTITUTE( 
Account_Name__c + &quot; - &quot; + Name, 
&quot;&amp;&quot;, &quot;og&quot;), Bid_Number__c),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BID Room SE</label>
    <type>Text</type>
</CustomField>