force-app/objects/Opportunity/fields/Bid_Team__c.field-meta.xml
<CustomField>
    <fullName>Bid_Team__c</fullName>
    <description>Used for reporting to Bid Team</description>
    <formula>IF(
				OR(
								TEXT(BID_Office_Owner__r.Business_Unit__c) = &apos;Business Development&apos;,
								AND(TEXT(BID_Office_Owner__r.Business_Unit__c) = &apos;&apos;,Owners_BU__c = &apos;Business Development&apos;))
				,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Team</label>
    <type>Checkbox</type>
</CustomField>