force-app/objects/Opportunity/fields/BID_URL_Country__c.field-meta.xml
<CustomField>
    <fullName>BID_URL_Country__c</fullName>
    <description>Used to build country specific part of bid room field</description>
    <label>BID URL Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>