force-app/objects/Opportunity/fields/BID_URL_Status__c.field-meta.xml
<CustomField>
    <fullName>BID_URL_Status__c</fullName>
    <label>BID URL Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>