force-app/objects/Opportunity/fields/BidOfficeOnwerIsUser__c.field-meta.xml
<CustomField>
    <fullName>BidOfficeOnwerIsUser__c</fullName>
    <formula>IF( BID_Office_Owner__c  = $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BidOfficeOnwerIsUser</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>