force-app/objects/Opportunity/fields/FAST_bid__c.field-meta.xml
<CustomField>
    <fullName>FAST_bid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FAST bid</label>
    <type>Checkbox</type>
</CustomField>