force-app/objects/Opportunity/fields/Is_Created_in_bid_portal__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_in_bid_portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOr bid integration</description>
    <label>Is Created in bid portal</label>
    <type>Checkbox</type>
</CustomField>