force-app/objects/Opportunity/fields/New_Template__c.field-meta.xml
<CustomField>
    <fullName>New_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Template</label>
    <type>Checkbox</type>
</CustomField>