force-app/objects/Opportunity/fields/Opportunity_BID_in_Sharepoint__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_BID_in_Sharepoint__c</fullName>
    <description>BID for this opportunity</description>
    <inlineHelpText>For  URL to OLD bid rooms. For bids created after 05.12.2017, 
new rooms are automatically assigned in new bid portal.</inlineHelpText>
    <label>OLD Bid portal. Do not use for new bids</label>
    <type>Url</type>
</CustomField>