force-app/objects/Opportunity/fields/OwnedBy_User_BidOffice__c.field-meta.xml
<CustomField>
    <fullName>OwnedBy_User_BidOffice__c</fullName>
    <formula>IF( OR(OwnerId = $User.Id, BID_Office_Owner__c = $User.Id) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnedBy$User_BidOffice</label>
    <type>Checkbox</type>
</CustomField>