force-app/objects/Opportunity/fields/Reset_Bid_Room__c.field-meta.xml
<CustomField>
    <fullName>Reset_Bid_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in the reset bid room process</description>
    <label>Reset Bid Room</label>
    <type>Checkbox</type>
</CustomField>