force-app/objects/Opportunity/fields/Sector_SE__c.field-meta.xml
<CustomField>
    <fullName>Sector_SE__c</fullName>
    <formula>TEXT(Account.Ownership_SE__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sector</label>
    <type>Text</type>
</CustomField>