force-app/objects/Opportunity/fields/Solution_Bid__c.field-meta.xml
<CustomField>
    <fullName>Solution_Bid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solution Bid</label>
    <type>Checkbox</type>
</CustomField>